# SnakeProject

./: CMakeLists.txt  ColorManager.cpp  ColorManager.h  InputHandler.cpp  InputHandler.h  LICENSE  README.md  Renderer.cpp  ScreenManager.cpp  ScreenManager.h  main.cpp
api/header/: ColorManager.h  InputHandler.h  NCursesAPI.h  Renderer.h  WindowManager.h
api/src/: ColorManager.cpp  InputHandler.cpp  NCursesAPI.cpp  Renderer.cpp  WindowManager.cpp
header/: ColorManager.h  GameAPI.h  InputHandler.h  Renderer.h
include/: ColorManager.h  GameAPI.h  Renderer.h  ScreenManager.h
lib/ncurses++/: Makefile  cursesapp.h  cursesw.h
src/: ColorManager.cpp  GameAPI.cpp  InputHandler.cpp  Renderer.cpp  ScreenManager.cpp  main.cpp
